--- a/index.html
+++ b/index.html
@@ -14,42 +14,42 @@
 		<div class="todo__body">
 			<div class="todo__priority--high">
 				<h2>HIGH</h2>
-				<form>
+				<form class="high">
 					<p><input class="newTask" placeholder="Добавить важных дел">
 					<button type="submit" class="todo__btn--add"></button></p>
 				</form>
 				<div class="task">
-					<input type="radio">
+					<input type="checkbox">
 					"Вот вам и супер интересная тема.
 					Вы наверняка заметили что ваши файлы с кодом становятся все объемнее, что хочется вынести некоторые вещи
 					куда-то за пределы основной программы."
 					<button class="todo__btn--del"></button>
 				</div>
-				<div class="task">
-					<input type="radio">
+				<div class="task" >
+					<input type="checkbox">
 					Сверстать этот ToDo лист
 					<button class="todo__btn--del">
 					</button>
 				</div>
 				<div class="task">
-					<input type="radio" checked>
+					<input type="checkbox" checked>
 					Начать делать задачу
 					<button class="todo__btn--del"></button>
 				</div>
 			</div>
 			<div class="todo__priority--low">
 				<h2>LOW</h2>
-				<form><input class="newTask" placeholder="Добавить важных дел">
+				<form class="low"><input class="newTask" placeholder="Добавить важных дел">
 					<button class="todo__btn--add" type="submit"></button></form>
 				<div class="task">
-					<input type="radio">
+					<input type="checkbox">
 					Посмотреть вебинар
 					<button class="todo__btn--del"></button>
 				</div>
 			</div>
 		</div>
 	</main>
-	<script src="./js/todo_browser.js"></script>
+	<script type="module" src="./js/todo_browser.js"></script>
 </body>
 
 </html>
