--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
 					<button type="submit" class="todo__btn--add"></button></p>
 				</form>
 				<div class="task">
-					<input type="checkbox">
+					<input type="checkbox" class = "box">
 					"Вот вам и супер интересная тема.
 					Вы наверняка заметили что ваши файлы с кодом становятся все объемнее, что хочется вынести некоторые вещи
 					куда-то за пределы основной программы."
 					<button class="todo__btn--del"></button>
 				</div>
-				<div class="task" >
+				<div class="task" class = "box">
 					<input type="checkbox">
 					Сверстать этот ToDo лист
 					<button class="todo__btn--del">
 					</button>
 				</div>
-				<div class="task">
+				<div class="task" class = "box">
 					<input type="checkbox" checked>
 					Начать делать задачу
 					<button class="todo__btn--del"></button>
@@ -42,7 +42,7 @@
 				<form class="low"><input class="newTask" placeholder="Добавить важных дел">
 					<button class="todo__btn--add" type="submit"></button></form>
 				<div class="task">
-					<input type="checkbox">
+					<input type="checkbox" class = "box">
 					Посмотреть вебинар
 					<button class="todo__btn--del"></button>
 				</div>
