--- a/index.html
+++ b/index.html
@@ -15,35 +15,33 @@
 			<div class="todo__priority--high">
 				<h2>HIGH</h2>
 				<form class="high">
-					<p><input class="newTask" placeholder="Добавить важных дел">
-					<button type="submit" class="todo__btn--add"></button></p>
+					<input class="newTask" placeholder="Добавить важных дел">
+					<button type="submit" class="todo__btn--add"></button>
 				</form>
 				<div class="task">
 					<input type="checkbox" class = "box">
-					"Вот вам и супер интересная тема.
-					Вы наверняка заметили что ваши файлы с кодом становятся все объемнее, что хочется вынести некоторые вещи
-					куда-то за пределы основной программы."
+					<p>Задача с высоким приоритетом 1</p>
 					<button class="todo__btn--del"></button>
 				</div>
 				<div class="task" class = "box">
 					<input type="checkbox">
-					Сверстать этот ToDo лист
+					<p>Задача с высоким приоритетом 2</p>
 					<button class="todo__btn--del">
 					</button>
 				</div>
 				<div class="task" class = "box">
 					<input type="checkbox" checked>
-					Начать делать задачу
+					<p>Задача с высоким приоритетом 3</p>
 					<button class="todo__btn--del"></button>
 				</div>
 			</div>
 			<div class="todo__priority--low">
 				<h2>LOW</h2>
-				<form class="low"><input class="newTask" placeholder="Добавить важных дел">
+				<form class="low"><input class="newTask" placeholder="Добавить не очень важных дел">
 					<button class="todo__btn--add" type="submit"></button></form>
 				<div class="task">
 					<input type="checkbox" class = "box">
-					Посмотреть вебинар
+					<p>Задача с низким приоритетом 1</p>
 					<button class="todo__btn--del"></button>
 				</div>
 			</div>
