--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<button class="todo__btn--del">
 					</button>
 				</div>
-				<div class="task" class = "box">
+				<div class="task">
 					<input type="checkbox" checked>
 					<p>Задача с высоким приоритетом 3</p>
 					<button class="todo__btn--del"></button>
