--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 					<p>Задача с высоким приоритетом 1</p>
 					<button class="todo__btn--del"></button>
 				</div>
-				<div class="task" class = "box">
-					<input type="checkbox">
+				<div class="task" >
+					<input type="checkbox" class = "box">
 					<p>Задача с высоким приоритетом 2</p>
 					<button class="todo__btn--del">
 					</button>
 				</div>
-				<div class="task">
-					<input type="checkbox" checked>
-					<p>Задача с высоким приоритетом 3</p>
+				<div class="task done">
+					<input type="checkbox" checked class = "box">
+					<p class>Задача с высоким приоритетом 3</p>
 					<button class="todo__btn--del"></button>
 				</div>
 			</div>
